# flowrad

./: .env.example
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/src/: ctProtocolAdvisor.py  patient.py  patientData.py
flowrad/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  types.ts
flowrad/app/: layout.tsx  page.tsx
flowrad/app/api/suggest/: route.ts
flowrad/components/: AdminView.tsx  ChatBubble.tsx  ClinicianView.tsx  LoadingSpinner.tsx  Logo.tsx  PatientView.tsx
flowrad/services/: geminiService.ts
src/: main.py
